# sqlings

./: .gitignore  LICENSE  README.md  pyproject.toml
sqlings/: config.py  exceptions.py  exercises.py  helpers.py  main.py  state.py
sqlings/answers/: advanced_01.sql  advanced_02.sql  advanced_03.sql  advanced_04.sql  advanced_05.sql  groupby_01.sql  groupby_02.sql  groupby_03.sql  groupby_04.sql  join_01.sql  join_02.sql  join_03.sql  join_04.sql  quiz_01.sql  select_01.sql  select_02.sql  select_03.sql  select_04.sql  select_05.sql  select_06.sql  select_07.sql  select_08.sql  where_01.sql  where_02.sql  where_03.sql  where_04.sql
sqlings/starter/: README.md  finished.txt  sqlings.toml
sqlings/starter/exercises/01_select/: select_01.sql  select_02.sql  select_03.sql  select_04.sql  select_05.sql  select_06.sql  select_07.sql  select_08.sql
sqlings/starter/exercises/02_where/: where_01.sql  where_02.sql  where_03.sql  where_04.sql
sqlings/starter/exercises/03_groupby/: groupby_01.sql  groupby_02.sql  groupby_03.sql  groupby_04.sql
sqlings/starter/exercises/04_join/: join_01.sql  join_02.sql  join_03.sql  join_04.sql
sqlings/starter/exercises/05_quiz/: quiz_01.sql
sqlings/starter/exercises/06_advanced_filtering/: advanced_01.sql  advanced_02.sql  advanced_03.sql  advanced_04.sql  advanced_05.sql
sqlings/ui/: __init__.py  app.py  splash.py  sqlings.tcss
tests/: conftest.py  test_config.py  test_exceptions.py  test_exercises.py  test_helpers.py  test_main.py  test_state.py  test_ui.py
